[package]
name = "bjerksund_stensland"
version = "0.1.0"
edition = "2024"
description = "A Rust implementation of the Bjerksund-Stensland approximation for pricing American options."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Mengzhen-Zhang/bjerksund_stensland.git"

[[example]]
name = "american_call"
path = "examples/american_call.rs"

[[example]]
name = "american_put"
path = "examples/american_put.rs"

[dependencies]
autodiff = "0.7.0"
mv-norm = "0.1.6"
nalgebra = "0.34.1"
num-dual = "0.12.1"
roots = "0.0.8"
simba = "0.9.1"
statrs = "0.18.0"
